platform/kyverno-policies.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-image-signature
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: verify-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - imageReferences:
            - "595981035245.dkr.ecr.ap-south-1.amazonaws.com/atul-devops-lab/poc-application:*"
          attestors:
            - entries:
                - keyless:
                    subject: "https://github.com/atul-devops-lab/POC-application/.github/workflows/ci.yml@refs/heads/main"
                    issuer: "https://token.actions.githubusercontent.com"
